--- a/project/project.css
+++ b/project/project.css
@@ -21,7 +21,7 @@ h1 {
 	margin-top: 7vh;
 }
 
-#container-1 {
+.container {
 	margin: 0;
 	padding: 0;
 	height: 50vh;
@@ -29,9 +29,10 @@ h1 {
 	display: grid;
 	grid-template-columns: repeat( 12 , 1fr );
 	grid-template-rows: 1fr 2fr;
+	margin-bottom: 30vh;
 }
 
-#container-1 img {
+.container img {
 	height: 100%;
 	width: auto;
 	grid-column: 1/7;
@@ -40,7 +41,7 @@ h1 {
 
 }
 
-#container-1 h2 {
+.container h2 {
 	font-weight: 400;
 	font-size: 3vw;
 	line-height: 2.6vw;
@@ -52,7 +53,7 @@ h1 {
 	margin-top: 12vh;
 }
 
-#container-1 p {
+.container p {
 	grid-column: 8/13;
 	grid-row: 2;
 	padding-right: 3vw;
